--- a/app/src/main/res/layout/post_comment_item.xml
+++ b/app/src/main/res/layout/post_comment_item.xml
@@ -18,7 +18,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/iv_detail_post_comment_icon"
+                android:id="@+id/iv_post_comment_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:clipToOutline="true"
@@ -29,7 +29,7 @@
         </androidx.cardview.widget.CardView>
 
         <TextView
-            android:id="@+id/tv_detail_post_comment"
+            android:id="@+id/tv_post_comment"
             android:layout_width="270dp"
             android:layout_height="wrap_content"
             android:maxLines="2"
@@ -40,12 +40,12 @@
             app:layout_constraintStart_toEndOf="@id/cv_detail_post_comment_ic"
             app:layout_constraintTop_toTopOf="@id/cv_detail_post_comment_ic" />
     <TextView
-        android:id="@+id/tv_detail_post_show_more"
+        android:id="@+id/tv_post_show_more"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:text="@string/show_more"
-        app:layout_constraintBottom_toBottomOf="@id/tv_detail_post_comment"
-        app:layout_constraintStart_toEndOf="@id/tv_detail_post_comment"
-        app:layout_constraintTop_toTopOf="@id/tv_detail_post_comment"/>
+        app:layout_constraintBottom_toBottomOf="@id/tv_post_comment"
+        app:layout_constraintStart_toEndOf="@id/tv_post_comment"
+        app:layout_constraintTop_toTopOf="@id/tv_post_comment"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
