--- a/app/src/main/res/layout-land/post_item.xml
+++ b/app/src/main/res/layout-land/post_item.xml
@@ -94,6 +94,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/open_pop_up_activity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/component_color">
