--- a/app/src/main/res/layout/profile_item.xml
+++ b/app/src/main/res/layout/profile_item.xml
@@ -6,7 +6,7 @@
 
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/iv_card_view"
+        android:id="@+id/cv_main_user_profile"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="10dp"
